--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,11 @@
   <body>
     <!-- the ui-view directive is where our templates will be loaded into when navigated to -->
     <div ui-view></div>
-  
+
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="app/services/services.js"></script>
-    <script type="text/javascript" src="app/login/login.js"></script>
+    <script type="text/javascript" src="app/home/home.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="app/app.js"></script>
   </body>
